[package]
name = "rustloc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.8.0"
actix-web = "4.3.1"
ipnetwork = "0.20.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
maxminddb = "0.23.0"
csv = "1.2.1"
rusqlite = { version = "0.28.0", features = ["bundled"] }
