[package]
name = "rustloc"
version = "0.1.2"
edition = "2021"

[dependencies]
actix-rt = "2.9.0"
actix-web = "4.4.0"
csv = "1.2.2"
env_logger = "0.10.0"
ipnetwork = "0.20.0"
log = "0.4.20"
maxminddb = "0.23.0"
reqwest = { version = "0.11.20", features = ["json", "blocking"] }
rusqlite = { version = "0.29.0", features = ["bundled"] }
serde = { version = "1.0.188", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full"] }
